fix(ZNTA-2405) center align modals and whitespace above page titles in frontend

--- a/server/zanata-frontend/src/app/styles/legacy.less
+++ b/server/zanata-frontend/src/app/styles/legacy.less
@@ -165,20 +165,6 @@ body.bodyStyle {
   .abs {
     position: absolute;
   }
-  .container {
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: @spacing-base;
-    padding-left: @spacing-base;
-  }
-  .container:focus {
-    outline: 0;
-  }
-  .container:after {
-    display: block;
-    clear: both;
-    content: "";
-  }
   body.templateStyle {
     background-color: inherit;
     font-size: inherit;
